samples/_failures_safe/1761045020_96b5f1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d478ea97.c: In function ‘tokenize’:
./samples/SAFE/__tmp_d478ea97.c:157:5: error: expected expression at end of input
  157 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_d478ea97.c:157:5: error: expected declaration or statement at end of input
